--- a/bin/monoko/ui/mainMenu.fxml
+++ b/bin/monoko/ui/mainMenu.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 
-<VBox fx:id="_mainMenuVBox" AnchorPane.topAnchor="0" AnchorPane.bottomAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.leftAnchor="0" alignment="CENTER" minHeight="600.0" minWidth="800.0" prefHeight="600.0" prefWidth="800.0" spacing="10.0" style="-fx-background-image: url(&quot;/textures/bg.jpg&quot;);&#10;-fx-background-position: center;&#10;-fx-background-size: cover;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2">
+<VBox fx:id="_mainMenuVBox" alignment="CENTER" minHeight="600.0" minWidth="800.0" prefHeight="600.0" prefWidth="800.0" spacing="10.0" style="-fx-background-image: url(&quot;/textures/bg.jpg&quot;);&#10;-fx-background-position: center;&#10;-fx-background-size: cover;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2">
   <children>
     <Pane minHeight="100.0" prefHeight="-1.0" prefWidth="-1.0" />
     <Label id="titleLabel" alignment="CENTER" contentDisplay="CENTER" minHeight="100.0" minWidth="200.0" text="Monoko" textFill="WHITE">
@@ -18,8 +18,8 @@
     <Pane maxHeight="400.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS" />
     <Button id="_playButton" contentDisplay="CENTER" minHeight="50.0" minWidth="150.0" mnemonicParsing="false" onAction="#onPlayButtonClicked" text="Play" />
     <Button id="_teamEditorButton" minHeight="50.0" minWidth="150.0" mnemonicParsing="false" onAction="#onTeamEditorButtonClicked" text="Team Editor" />
-    <Button id="_helpButton" minHeight="50.0" minWidth="150.0" mnemonicParsing="false" onAction="#onHelpButtonClicked" text="Help" />
-    <Button id="_loreButton" minHeight="50.0" minWidth="150.0" mnemonicParsing="false" onAction="#onLoreButtonClicked" text="Lore" />
+    <Button fx:id="_helpButton" minHeight="50.0" minWidth="150.0" mnemonicParsing="false" onAction="#onHelpButtonClicked" text="Help" />
+    <Button fx:id="_loreButton" minHeight="50.0" minWidth="150.0" mnemonicParsing="false" onAction="#onLoreButtonClicked" text="Lore" />
     <Button id="_quitButton" minHeight="50.0" minWidth="150.0" mnemonicParsing="false" onAction="#onQuitButtonClicked" text="Quit" />
     <Pane prefHeight="-1.0" prefWidth="-1.0" />
   </children>
