--- a/src/monoko/ui/characterCreation.fxml
+++ b/src/monoko/ui/characterCreation.fxml
@@ -24,7 +24,7 @@
     <HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0" spacing="10.0" VBox.vgrow="ALWAYS">
       <children>
         <Pane prefHeight="-1.0" prefWidth="-1.0" />
-        <TitledPane animated="false" collapsible="false" maxHeight="1.7976931348623157E308" maxWidth="375.0" minWidth="275.0" opacity="0.8" text="Soul Class" underline="false" HBox.hgrow="ALWAYS">
+        <TitledPane animated="false" collapsible="false" maxHeight="1.7976931348623157E308" maxWidth="500.0" minWidth="275.0" opacity="0.8" text="Soul Class" underline="false" HBox.hgrow="ALWAYS">
           <content>
             <HBox id="HBox" alignment="CENTER" spacing="5.0">
               <children>
@@ -33,9 +33,9 @@
                   <children>
                     <Pane prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="NEVER" />
                     <ComboBox id="classComboBox" fx:id="_jobComboBox" maxWidth="1.7976931348623157E308" VBox.vgrow="NEVER" />
-                    <AnchorPane id="AnchorPane" fx:id="_jobAnchorPane" minWidth="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+                    <AnchorPane id="AnchorPane" fx:id="_jobAnchorPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minWidth="200.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
                       <children>
-                        <ImageView id="classImageView" fx:id="_jobImageView" fitHeight="150.0" fitWidth="200.0" layoutX="42.0" pickOnBounds="true" preserveRatio="true" AnchorPane.topAnchor="0.0" />
+                        <ImageView id="classImageView" fx:id="_jobImageView" fitHeight="150.0" fitWidth="400.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                       </children>
                     </AnchorPane>
                     <Button fx:id="jobInfoButton" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Informations" visible="true" VBox.vgrow="NEVER" />
@@ -47,7 +47,7 @@
             </HBox>
           </content>
         </TitledPane>
-        <TitledPane animated="false" collapsible="false" maxHeight="1.7976931348623157E308" maxWidth="375.0" minWidth="275.0" opacity="0.8" text="Deity Worshiped" HBox.hgrow="ALWAYS">
+        <TitledPane animated="false" collapsible="false" maxHeight="1.7976931348623157E308" maxWidth="500.0" minWidth="275.0" opacity="0.8" text="Deity Worshiped" HBox.hgrow="ALWAYS">
           <content>
             <HBox id="HBox" alignment="CENTER" spacing="5.0">
               <children>
@@ -56,9 +56,9 @@
                   <children>
                     <Pane prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="NEVER" />
                     <ComboBox id="godComboBox" fx:id="_godComboBox" maxWidth="1.7976931348623157E308" VBox.vgrow="NEVER" />
-                    <AnchorPane id="AnchorPane" minWidth="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+                    <AnchorPane id="AnchorPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minWidth="200.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
                       <children>
-                        <ImageView id="classImageView" fx:id="_godImageView" fitHeight="150.0" fitWidth="200.0" layoutX="42.0" layoutY="0.0" pickOnBounds="true" preserveRatio="true" />
+                        <ImageView id="classImageView" fx:id="_godImageView" fitHeight="150.0" fitWidth="400.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                       </children>
                     </AnchorPane>
                     <Button fx:id="godInfoButton" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Informations" visible="true" VBox.vgrow="NEVER" />
@@ -159,6 +159,7 @@
         <Pane prefHeight="-1.0" prefWidth="-1.0" HBox.hgrow="ALWAYS" />
         <Label alignment="CENTER" contentDisplay="CENTER" font="$x1" minHeight="50.0" minWidth="50.0" text="Cost : " textFill="WHITE" />
         <Label fx:id="_costValueLabel" alignment="CENTER" font="$x1" minHeight="50.0" minWidth="50.0" text="15" textFill="WHITE" />
+        <ImageView fx:id="_coinImageView" fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true" />
         <Pane maxWidth="860.0" prefHeight="-1.0" prefWidth="-1.0" HBox.hgrow="ALWAYS" />
         <Button id="createCharacterButton" fx:id="_createCharacterButton" font="$x1" minHeight="50.0" minWidth="200.0" mnemonicParsing="false" onAction="#onCreateCharacterButtonClicked" text="Create Character" HBox.hgrow="NEVER" />
         <Pane prefHeight="-1.0" prefWidth="-1.0" />
