--- a/src/monoko/ui/game.fxml
+++ b/src/monoko/ui/game.fxml
@@ -8,13 +8,13 @@
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 
-<StackPane fx:id="root" alignment="BOTTOM_CENTER" prefHeight="1015.0" prefWidth="1920.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2">
+<StackPane fx:id="root" alignment="BOTTOM_CENTER" prefHeight="1015.0" prefWidth="1920.0" style="-fx-background-image: url(&quot;/textures/bg.png&quot;);&#10;-fx-background-position: center;&#10;-fx-background-size: cover;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2">
   <children>
     <HBox alignment="TOP_CENTER" prefHeight="-1.0" prefWidth="-1.0" StackPane.alignment="CENTER">
       <children>
         <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" HBox.hgrow="ALWAYS">
           <children>
-            <Label fx:id="_vsLabel" text="Label">
+            <Label fx:id="_vsLabel" text="Label" textFill="#dfdfdf">
               <font>
                 <Font size="30.0" />
               </font>
@@ -23,8 +23,8 @@
         </VBox>
         <VBox id="VBox" alignment="CENTER" spacing="5.0">
           <children>
-            <Label text="Currently playing : " />
-            <Label fx:id="_currentPlayerLabel" text="name" />
+            <Label text="Currently playing : " textFill="WHITE" />
+            <Label fx:id="_currentPlayerLabel" text="name" textFill="WHITE" />
             <ProgressIndicator fx:id="_turnTimerIndicator" disable="false" minHeight="100.0" minWidth="100.0" progress="0.0" style="" />
           </children>
         </VBox>
